--- a/full1.css
+++ b/full1.css
@@ -3,6 +3,8 @@
     -webkit-text-size-adjust: 100%;
   }
   
+  background-color: rgba(203,213,224,var(--text-opacity));
+
   body {
     margin: 0;
   }
